OnlinePythonTutor/v4-cokapi/backends/javascript/tests/no-prototype-object.golden
{ code: '// 2020-02-10: almost works properly now, but there\'s a mysterious\n// "TypeError: value.valueOf is not a function" error when running\n// console.log() ... weird! anyhow, punt for now.\nvar y = Object.create(null);\nconsole.log(y);',
  trace: 
   [ { stdout: '',
       func_name: '',
       stack_to_render: [],
       globals: { y: [ 'JS_SPECIAL_VAL', 'undefined' ] },
       ordered_globals: [ 'y' ],
       line: 4,
       col: 0,
       event: 'step_line',
       heap: {} },
     { stdout: '',
       func_name: '',
       stack_to_render: [],
       globals: { y: [ 'REF', 1 ] },
       ordered_globals: [ 'y' ],
       line: 5,
       col: 0,
       event: 'step_line',
       heap: { '1': [ 'INSTANCE', '' ] } },
     { exception_msg: 'TypeError: value.valueOf is not a function',
       stdout: '',
       func_name: '',
       stack_to_render: [],
       globals: { y: [ 'REF', 1 ] },
       ordered_globals: [ 'y' ],
       line: 5,
       col: 0,
       event: 'exception',
       heap: { '1': [ 'INSTANCE', '' ] } },
     { stdout: '{}\n',
       func_name: '',
       stack_to_render: [],
       globals: { y: [ 'REF', 1 ] },
       ordered_globals: [ 'y' ],
       line: 5,
       col: 15,
       event: 'step_line',
       heap: { '1': [ 'INSTANCE', '' ] } } ] }
